# Sit2Stand

./: LBRJointSineOverlay.java  README.md  paper_figures.m  q_linear_z.csv  sit2StandExperiments.asv  sit2StandExperiments.m  sit2Stand_analysis.asv  sit2Stand_analysis.m
figure_data/: Aronson_1977_compound-bow.csv  Chugo_2006_Fig-5-b.csv
figures/: st2si_2026-06-05_legend.tiff
figures/fig-05_cams-and-force-profiles/: cam-shapes-si2st_2026-01-12.fig  cam-shapes-st2si_2026-01-12.fig  sim-profiles-displacement_2026-01-12.fig  sim-profiles-percentage_2026-01-12.fig
figures/fig-08_measured-force-profiles/_superseded/: sit-to-stand_2026-01-10.fig  sit-to-stand_2026-01-12.fig  stand-to-sit_2026-01-10.fig  stand-to-sit_2026-01-12.fig
results/: results_si2st.csv  results_si2st.xlsx  results_st2si.csv  results_st2si.xlsx
robot_posCtrl/data/: q_linear_z.csv  q_linear_z_sit_to_stand.csv  q_linear_z_stand_to_sit.csv  q_linear_z_stand_to_sit_6-8-cm-stroke.csv
robot_posCtrl/data/superseded/: q_linear_z_sit_to_stand_0-25s.csv  q_linear_z_sit_to_stand_0-5s.csv  q_linear_z_sit_to_stand_2026-01-10.csv  q_linear_z_sit_to_stand_2026-05-21.csv  q_linear_z_sit_to_stand_no_hold.csv  q_linear_z_sit_to_stand_spring.csv  q_linear_z_stand_to_sit_2026-01-10.csv
robot_posCtrl/data/trajectories_paper/: q_linear_z_sit_to_stand.csv
robot_posCtrl/prints/: File_FExt.txt  File_F_ft.txt  File_F_tau.txt  File_dq.txt  File_dt.txt  File_q.txt  compare-wrenches-w-ft-sensor.fig  compareWrenches.m
robot_posCtrl/prints/2025-11-24/: File_dq.txt
robot_posCtrl/prints/2025-11-25/: File_FExt.txt  File_dq.txt  File_dt.txt  File_q.txt
robot_posCtrl/prints/2025-12-08/: File_FExt.txt  File_q.txt
robot_posCtrl/prints/2025-12-09/: File_FExt.txt
robot_posCtrl/prints/2025-12-17_Sit2StandCable_01/: File_q.txt
robot_posCtrl/prints/2025-12-17_Sit2StandCable_02 (didn't pull all the way)/: File_dq.txt  File_q.txt
robot_posCtrl/prints/2025-12-17_Sit2StandCable_03 (didn't re-wrap all the way)/: File_dq.txt
robot_posCtrl/prints/2025-12-17_Sit2StandCable_04/: File_FExt.txt  File_dt.txt  File_q.txt
robot_posCtrl/prints/2025-12-17_Sit2StandCable_04 (didn't re-wrap all the way)/: File_dq.txt
robot_posCtrl/prints/2025-12-17_Stand2SitCable_01/: File_dt.txt
robot_posCtrl/prints/2025-12-17_Stand2SitCable_02/: File_q.txt
robot_posCtrl/prints/2025-12-17_Stand2SitCable_03 (popping off sit2stand path)/: File_FExt.txt  File_dq.txt  File_q.txt
robot_posCtrl/prints/2026-01-10_Sit2Stand_01/: File_FExt.txt  File_dq.txt  File_dt.txt  File_q.txt
robot_posCtrl/prints/2026-01-10_Stand2Sit_01/: File_dq.txt
robot_posCtrl/prints/2026-01-10_Stand2Sit_02/: File_FExt.txt  File_q.txt
robot_posCtrl/prints/2026-01-10_Stand2Sit_03/: File_FExt.txt  File_q.txt
robot_posCtrl/prints/2026-01-13_Federico-sit_02/: File_dq.txt
robot_posCtrl/prints/2026-01-13_Federico-sit_03/: File_dt.txt
robot_posCtrl/prints/2026-01-13_Federico-sit_04/: File_q.txt
robot_posCtrl/prints/2026-01-14_0-25s-duration-WD40/: File_dq.txt  File_q.txt
robot_posCtrl/prints/2026-01-14_0-5s-duration-WD40/: File_dt.txt  File_q.txt
robot_posCtrl/src/: CMakeLists.txt  LBRJointSineOverlayApp.cpp  LBRJointSineOverlayClient.cpp  LBRJointSineOverlayClient.h
simulation_data/: si2st_force_63.mat  si2st_force_63_radius_projection.mat  si2st_force_63_spatial.mat  st2si_force_63.mat  st2si_force_63_radius_projection.mat  st2si_force_63_spatial.mat
simulation_data/_superseded/: si2st_force_63.mat  si2st_force_63_no_projection.mat  st2si_force.mat
(+143 files in other folders)
